--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,2 +1,3 @@
 .xref:index.adoc[MuleSoft MCP Server]
 * xref:index.adoc[MuleSoft MCP Server Overview]
+** xref:getting-started.adoc[Getting Started with MuleSoft MCP Server]
